docs/api/qiskit/0.43/qiskit.circuit.library.FunctionalPauliRotations.mdx
---
title: FunctionalPauliRotations
description: API reference for qiskit.circuit.library.FunctionalPauliRotations
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.FunctionalPauliRotations
---

# FunctionalPauliRotations

<Class id="qiskit.circuit.library.FunctionalPauliRotations" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/library/arithmetic/functional_pauli_rotations.py" signature="FunctionalPauliRotations(num_state_qubits=None, basis='Y', name='F')">
  Bases: `BlueprintCircuit`, `ABC`

  Base class for functional Pauli rotations.

  Create a new functional Pauli rotation circuit.

  **Parameters**

  *   **num\_state\_qubits** (*int | None*) – The number of qubits representing the state $|x\rangle$.
  *   **basis** (*str*) – The kind of Pauli rotation to use. Must be ‘X’, ‘Y’ or ‘Z’.
  *   **name** (*str*) – The name of the circuit object.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### basis

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.basis" name="basis">
    The kind of Pauli rotation to be used.

    Set the basis to ‘X’, ‘Y’ or ‘Z’ for controlled-X, -Y, or -Z rotations respectively.

    **Returns**

    The kind of Pauli rotation used in controlled rotation.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.calibrations" name="calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.data" name="data" />

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.instances" name="instances" attributeValue="= 125" />

  ### layout

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.layout" name="layout">
    Return any associated layout information anout the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.metadata" name="metadata">
    The user provided metadata associated with the circuit.

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancilla\_qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_ancilla_qubits" name="num_ancilla_qubits">
    The minimum number of ancilla qubits in the circuit.

    **Returns**

    The minimal number of ancillas required.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_parameters" name="num_parameters" />

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_qubits" name="num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_state_qubits" name="num_state_qubits">
    The number of state qubits representing the state $|x\rangle$.

    **Returns**

    The number of state qubits.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.parameters" name="parameters" />

  ### prefix

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.qregs" name="qregs" attributeTypeHint="list[QuantumRegister]">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>
</Class>

