docs/api/qiskit/1.1/qiskit.circuit.library.FunctionalPauliRotations.mdx
---
title: FunctionalPauliRotations (v1.1)
description: API reference for qiskit.circuit.library.FunctionalPauliRotations in qiskit v1.1
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.FunctionalPauliRotations
---

# FunctionalPauliRotations

<Class id="qiskit.circuit.library.FunctionalPauliRotations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/library/arithmetic/functional_pauli_rotations.py#L22-L114" signature="qiskit.circuit.library.FunctionalPauliRotations(num_state_qubits=None, basis='Y', name='F')" modifiers="class">
  Bases: `BlueprintCircuit`, [`ABC`](https://docs.python.org/3/library/abc.html#abc.ABC "(in Python v3.12)")

  Base class for functional Pauli rotations.

  Create a new functional Pauli rotation circuit.

  **Parameters**

  *   **num\_state\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)") *| None*) – The number of qubits representing the state $|x\rangle$.
  *   **basis** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – The kind of Pauli rotation to use. Must be ‘X’, ‘Y’ or ‘Z’.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – The name of the circuit object.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.ancillas">
    A list of `AncillaQubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### basis

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.basis">
    The kind of Pauli rotation to be used.

    Set the basis to ‘X’, ‘Y’ or ‘Z’ for controlled-X, -Y, or -Z rotations respectively.

    **Returns**

    The kind of Pauli rotation used in controlled rotation.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.calibrations">
    Return calibration dictionary.

    The custom pulse definition of a given gate is of the form `{'gate_name': {(qubits, params): schedule}}`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.clbits">
    A list of `Clbit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.data" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.global_phase">
    The global phase of the current circuit scope in radians.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.instances" attributeValue="170" />

  ### layout

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.layout">
    Return any associated layout information about the circuit

    This attribute contains an optional [`TranspileLayout`](qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") object. This is typically set on the output from [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") or [`PassManager.run()`](qiskit.transpiler.PassManager#run "qiskit.transpiler.PassManager.run") to retain information about the permutations caused on the input circuit by transpilation.

    There are two types of permutations caused by the [`transpile()`](compiler#qiskit.compiler.transpile "qiskit.compiler.transpile") function, an initial layout which permutes the qubits based on the selected physical qubits on the [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target"), and a final layout which is an output permutation caused by [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")s inserted during routing.
  </Attribute>

  ### metadata

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.metadata">
    Arbitrary user-defined metadata for the circuit.

    Qiskit will not examine the content of this mapping, but it will pass it through the transpiler and reattach it to the output, so you can track your own metadata.
  </Attribute>

  ### num\_ancilla\_qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_ancilla_qubits">
    The minimum number of ancilla qubits in the circuit.

    **Returns**

    The minimal number of ancillas required.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_captured\_vars

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_captured_vars">
    The number of real-time classical variables in the circuit marked as captured from an enclosing scope.

    This is the length of the `iter_captured_vars()` iterable. If this is non-zero, [`num_input_vars`](#qiskit.circuit.library.FunctionalPauliRotations.num_input_vars "qiskit.circuit.library.FunctionalPauliRotations.num_input_vars") must be zero.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_declared\_vars

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_declared_vars">
    The number of real-time classical variables in the circuit that are declared by this circuit scope, excluding inputs or captures.

    This is the length of the `iter_declared_vars()` iterable.
  </Attribute>

  ### num\_input\_vars

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_input_vars">
    The number of real-time classical variables in the circuit marked as circuit inputs.

    This is the length of the `iter_input_vars()` iterable. If this is non-zero, [`num_captured_vars`](#qiskit.circuit.library.FunctionalPauliRotations.num_captured_vars "qiskit.circuit.library.FunctionalPauliRotations.num_captured_vars") must be zero.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_parameters" />

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_state_qubits">
    The number of state qubits representing the state $|x\rangle$.

    **Returns**

    The number of state qubits.
  </Attribute>

  ### num\_vars

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.num_vars">
    The number of real-time classical variables in the circuit.

    This is the length of the `iter_vars()` iterable.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.12)") – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.parameters" />

  ### prefix

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.prefix" attributeValue="'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.qregs" attributeTypeHint="list[QuantumRegister]">
    A list of the `QuantumRegister`s in this circuit. You should not mutate this.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.qubits">
    A list of `Qubit`s in the order that they were added. You should not mutate this.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.name" attributeTypeHint="str">
    A human-readable name for the circuit.
  </Attribute>

  ### cregs

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.cregs" attributeTypeHint="list[ClassicalRegister]">
    A list of the `ClassicalRegister`s in this circuit. You should not mutate this.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.duration" attributeTypeHint="int | float | None">
    The total duration of the circuit, set by a scheduling transpiler pass. Its unit is specified by [`unit`](#qiskit.circuit.library.FunctionalPauliRotations.unit "qiskit.circuit.library.FunctionalPauliRotations.unit").
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.FunctionalPauliRotations.unit">
    The unit that [`duration`](#qiskit.circuit.library.FunctionalPauliRotations.duration "qiskit.circuit.library.FunctionalPauliRotations.duration") is specified in.
  </Attribute>
</Class>

